# uiseg

./: README.md  pyproject.toml
.github/workflows/: release.yaml
tests/: test_api.py
uiseg/: __init__.py  core.py
