[project]
name = "uiseg"
version = "0.1.0"
description = "Simple UI Segment Lib"
authors = [
    { name = "williamfzc", email = "williamfzc@foxmail.com" },
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.10.6",
    "pillow>=10.4.0",
]
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
